--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="timer-container">
-        <div class="timer ">
+        <div class="timer">
+            <!-- <div class="con-text">
+                <h1>Hey! It is TIME</h1>
+            </div> -->
             <div class="timer-text containers">
                 <h2>Countdown Timer</h2>
                 <p>Let the Countdown Begin</p>
@@ -21,28 +24,24 @@
             <div class="timer-count  containers">
                 <section>
                     <input type="number" name="" class="parasize" id="timer-count-days" max="366" min="0" value="0">
-                    <!-- <p class="parasize timer-count-days">00</p> -->
                     <p><small>Days</small></p>
                 </section>
                 <span class="parasize">:</span>
 
                 <section>
                     <input type="number" name="" class="parasize" id="timer-count-hours" max="24" min="0" value="0">
-                    <!-- <p class="parasize timer-count-hours">00</p> -->
                     <p><small>Hours</small></p>
                 </section>
                 <span class="parasize">:</span>
 
                 <section>
                     <input type="number" name="" class="parasize" id="timer-count-mins" max="60" min="0" value="0">
-                    <!-- <p class="parasize timer-count-mins">00</p> -->
                     <p><small>Minutes</small></p>
                 </section>
                 <span class="parasize">:</span>
 
                 <section>
                     <input type="number" name="" class="parasize" id="timer-count-secs" max="60" min="0" value="0">
-                    <!-- <p class="parasize timer-count-secs">00</p> -->
                     <p><small>Seconds</small></p>
                 </section>
                 
