--- a/index.html
+++ b/index.html
@@ -11,40 +11,21 @@
     <div class="timer-container">
         <div class="timer">
             <!-- <div class="con-text">
-                <h1>Hey! It is TIME</h1>
+                Hey! It is TIME
             </div> -->
             <div class="timer-text containers">
                 <h2>Countdown Timer</h2>
                 <p>Let the Countdown Begin</p>
             </div>
-            <!-- <div class=" set-timer containers">
-                <input type="text" placeholder="Set Time in Hours" class="set-timer-input">
-                <input type="button" value="Set Timer" class="set-timer-btn">
-            </div> -->
+            <form class=" set-timer containers">
+                    <input type="number" name="" id="" placeholder="Set Time in Hours" class="set-timer-input">
+                    <input type="submit" value=" Click to Set Timer" class="set-timer-btn">
+            </form>
+            
             <div class="timer-count  containers">
-                <section>
-                    <input type="number" name="" class="parasize" id="timer-count-days" max="366" min="0" value="0">
-                    <p><small>Days</small></p>
-                </section>
-                <span class="parasize">:</span>
-
-                <section>
-                    <input type="number" name="" class="parasize" id="timer-count-hours" max="24" min="0" value="0">
-                    <p><small>Hours</small></p>
-                </section>
-                <span class="parasize">:</span>
-
-                <section>
-                    <input type="number" name="" class="parasize" id="timer-count-mins" max="60" min="0" value="0">
-                    <p><small>Minutes</small></p>
-                </section>
-                <span class="parasize">:</span>
-
-                <section>
-                    <input type="number" name="" class="parasize" id="timer-count-secs" max="60" min="0" value="0">
-                    <p><small>Seconds</small></p>
-                </section>
-                
+                <h1 class="counter-time">
+                    00h : 00m : 00s
+                </h1>
             </div>
             <div class="timer-btn containers">
                 <input type="button" value="Start" id="start">
